@startuml

title __CTS_S3's Class Diagram__\n

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace com.company {
    namespace clase {
      abstract class com.company.clase.Account {
      }
    }
  }
  

  namespace com.company {
    namespace clase {
      abstract class com.company.clase.BankAccount {
      }
    }
  }
  

  namespace com.company {
    namespace clase {
      class com.company.clase.CurrentAccount {
      }
    }
  }
  

  namespace com.company {
    namespace exceptii {
      class com.company.exceptii.IllegalFundsException {
      }
    }
  }
  

  namespace com.company {
    namespace exceptii {
      class com.company.exceptii.IllegalTransferException {
      }
    }
  }
  

  com.company.clase.BankAccount -up-|> com.company.clase.Account
  com.company.clase.CurrentAccount -up-|> com.company.clase.BankAccount


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
